--- a/blue.html
+++ b/blue.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
+<link rel="stylesheet" href="style.css"/>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
