--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   <li style="color:#00F">
     <a href="blue.html">파란 페이지</a>
   </li>
-</ul>
+<li>
+    <a href="rainbow.html">무지개 페이지</a>
+  </li>
+</ul>>
 
 </body>
 
